# issac-sim-pipeline

./: .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: dataset.yaml  training.yaml
docs/: ROADMAP.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: api-inference.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: convert_replicator_to_yolo.py  generate_synthetic_dataset.py
src/api/: app.py
src/training/: train_yolo.py
src/ui/: app.py
